--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 :root {
   --heading-font: "Roboto Slab", serif;
-  --content-font: "Sanchez", serif;
 }
 
 * {
@@ -15,7 +14,7 @@ body {
   font-family: var(--content-font);
 }
 
-.TuTangle {
+h1 {
   font-family: var(--heading-font);
   font-size: 60px;
   margin-left: 25px;
@@ -28,10 +27,6 @@ header {
   margin: 0px;
   display: flex;
   justify-content: space-between;
-}
-
-.headerTab {
-  width: 20%;
 }
 
 .searchBox {
@@ -86,30 +81,56 @@ header {
   margin-left: auto;
 }
 
+.containerr {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .leftMenu {
-  flex: 35%;
-  padding: 15px 0;
+  width: 250px;
 }
 
-.left h2 {
-  padding-left: 8px;
-}
-
-#menu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#menu li a {
+.side-listitem {
+  display: flex;
+  justify-content: space-between;
   padding: 12px;
+  background-color: #eee;
+}
+
+.side-listitem a {
+  color: black;
   text-decoration: none;
+}
+
+.leftMenu .title {
+  background-color: #eee;
   color: black;
   display: block;
+  padding: 12px;
+  text-decoration: none;
 }
 
-#menu li a:hover {
+.leftMenu a.active {
+  background-color: #87ceeb;
+  color: white;
+}
+
+.rightMenu {
+  width: 250px;
+}
+
+.rightMenu a {
   background-color: #eee;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.rightMenu a.active {
+  background-color: #87ceeb;
+  color: white;
 }
 
 .float-left {
@@ -124,4 +145,142 @@ header {
   list-style-type: none;
   padding: 0;
   margin: 0;
+}
+
+.main-content {
+  width: 50%;
+}
+
+.entries {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  border-bottom: 5px solid skyblue;
+}
+
+.entries .entries-child {
+  width: 49.7%;
+  background: #eee;
+}
+
+.all-entries {
+  border-top-left-radius: 20px;
+}
+
+.subscribed {
+  border-top-right-radius: 20px;
+}
+
+h4 {
+  margin: 15px;
+}
+
+.tabs {
+  padding: 0px 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tabs div {
+  width: 47%;
+  height: 40px;
+  background: lightgray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.tabs .active {
+  background-color: skyblue;
+}
+
+h2 {
+  margin-bottom: 10px;
+}
+
+.entry-lists {
+  border-bottom: 1px solid gray;
+  padding: 10px;
+  display: flex;
+}
+
+.member-title {
+  padding: 10px;
+  color: gray;
+}
+
+.entry-tabs {
+  display: flex;
+  flex-direction: row;
+}
+
+.tab-section left {
+  display: flex;
+  margin-left: 15px;
+}
+
+.tab-section right {
+  display: flex;
+}
+
+img {
+  border-radius: 10%;
+}
+
+.all-member-title a {
+  text-decoration: none;
+  color: #2f2f2f;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.member-by a {
+  text-decoration: none;
+  color: #51aebf;
+  font-weight: bold;
+}
+
+.subscribe {
+  color: #70961d;
+  font-weight: bold;
+}
+
+.from-topic-box a {
+  text-decoration: none;
+  color: #51aebf;
+  font-weight: bold;
+}
+
+.new-alert {
+  font-weight: bold;
+  color: #51aebf;
+}
+
+.new-alert a {
+  text-decoration: none;
+  color: #51aebf;
+}
+
+.new-alert.invite a {
+  color: red;
+}
+
+.blue{
+  color: :;
+}
+
+footer {
+  background-color: #43464b;
+  padding: 15px 50px;
+  margin-top: 80px;
+  width: 100%;
+  text-align: left;
+}
+
+footer a {
+  color: white;
+  font-size: 12px;
+  text-decoration: none;
 }
